# ErrandBoy

./: .dockerignore  .env.example  .env.production  .gitignore  AWS_CREDENTIALS_SETUP.md  AWS_DEPLOYMENT_GUIDE.md  CICD_SETUP.md  Dockerfile  ELASTIC_BEANSTALK_GUIDE.md  Procfile  README.md  SETUP_PRODUCTION_DB.md  application.py  configure_aws.sh  create_tables.py  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  railway.json  railway.toml  requirements.txt  start.py  test_endpoint.py  test_expert_notifications.py
.claude/: settings.local.json
.ebextensions/: 01_python.config
.github/ISSUE_TEMPLATE/: mvp_issues.md
groupchat/: __init__.py  config.py  main.py
groupchat/agent/: __init__.py  tools.py  workflow.py
groupchat/api/: __init__.py  admin.py  agent.py  contacts.py  demo.py  expert_preferences.py  health.py  ledger.py  matching.py  payments.py  queries.py  webhooks.py  websockets.py
groupchat/db/: __init__.py  database.py  models.py
groupchat/middleware/: __init__.py  logging.py  rate_limit.py  request_id.py
groupchat/schemas/: contacts.py  expert_notifications.py  matching.py  queries.py
groupchat/services/: contacts.py  demo.py  email_notifications.py  embeddings.py  expert_notification_orchestrator.py  ledger.py  matching.py  payment_service.py  plaid_service.py  queries.py  sms.py  stripe_connect_service.py  synthesis.py
groupchat/utils/: __init__.py  geographic.py  logging.py
migrations/: env.py
migrations/versions/: 001_initial_schema_with_pgvector.py  20250907_1913-8f456104b9b8_add_expert_notification_and_response_.py
scripts/: README.md  clear_production_data.py  clear_remaining_contacts.sh  deploy_aws.sh  enhanced_seed_data.py  seed_data.py  seed_demo.py  setup_dev.sh
static/: README.md  admin.html  answer.html  demo.html  expert-auth.html  expert-enhanced.html  expert.html  index.html  my-questions.html  signup.html  test-answer.html  test.html
static/css/: styles.css
static/js/: admin.js  answer.js  api.js  app.js  demo.js  expert-enhanced.js  (+1 more)
tests/: __init__.py  conftest.py  test_agent_tools.py  test_api_integration.py  test_contacts.py  test_contacts_simple.py  test_health.py  test_ledger.py  test_matching.py  test_sms.py  test_synthesis.py  test_synthesis_unit.py
